...
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/padding_8"
        app:cardElevation="@dimen/padding_1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_call_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="@{callWithFilter.deleteMode &amp;&amp; !callWithFilter.callFiltered ? 0.5f : 1f}"
            android:paddingHorizontal="@dimen/padding_8"
            android:paddingVertical="@dimen/padding_16">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/item_call_avatar"
                android:layout_width="@dimen/margin_50"
                android:layout_height="@dimen/margin_50"
                android:background="@color/avatar_bg"
                android:scaleType="center"
                app:imageUrl="@{callWithFilter.photoUrl}"
                app:layout_constraintBottom_toBottomOf="@+id/item_call_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/item_call_number"
                app:placeHolder="@{callWithFilter.placeHolder(context)}"
                app:shapeAppearanceOverlay="@style/RoundedImageViewStyle" />

            <ImageView
                android:id="@+id/item_call_filter"
                android:layout_width="@dimen/margin_20"
                android:layout_height="@dimen/margin_20"
                android:visibility="@{callWithFilter.extract &amp;&amp; callWithFilter.filterWithFilteredNumberUIModel.filterType > 0 ? View.VISIBLE : View.GONE}"
                app:imageResource="@{callWithFilter.filterWithFilteredNumberUIModel.filterTypeIcon}"
                app:layout_constraintBottom_toBottomOf="@+id/item_call_avatar"
                app:layout_constraintEnd_toEndOf="@+id/item_call_avatar" />

            <TextView
                android:id="@+id/item_call_number"
                android:layout_width="@dimen/size_0"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:text="@{callWithFilter.number.empty ? @string/details_number_hidden : callWithFilter.highlightedSpanned}"
                app:layout_constraintBottom_toTopOf="@+id/item_call_name"
                app:layout_constraintEnd_toStartOf="@+id/item_call_time"
                app:layout_constraintStart_toEndOf="@+id/item_call_avatar"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_call_time"
                android:layout_width="wrap_content"
...
                android:maxLines="1"
                android:textColor="@color/text_color_grey"
                app:layout_constraintEnd_toEndOf="@+id/item_call_number"
                app:layout_constraintStart_toStartOf="@+id/item_call_number"
                app:layout_constraintTop_toBottomOf="@+id/item_call_number"
                app:layout_constraintBottom_toBottomOf="@+id/item_call_avatar"
                app:mainText="@{callWithFilter.nameEmpty ? callWithFilter.isExtract ? @string/details_number_from_call_log : @string/details_number_not_from_contacts : callWithFilter.callName}"
                app:searchText="@{callWithFilter.searchText}" />

            <ImageView
                android:id="@+id/item_call_type_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_6"
                android:visibility="@{callWithFilter.deleteMode &amp;&amp; callWithFilter.callFiltered || callWithFilter.extract ? View.GONE : View.VISIBLE}"
                app:imageResource="@{callWithFilter.callIcon()}"
                app:layout_constraintEnd_toEndOf="@+id/item_call_delete"
                app:layout_constraintStart_toEndOf="@+id/item_call_number"
                app:layout_constraintTop_toBottomOf="@+id/item_call_time" />

            <CheckBox
                android:id="@+id/item_call_delete"
                android:layout_width="wrap_content"
...
